# basecamp-ai-sec

./: .gitignore  CONTRIBUTING.md  LICENSE  PLAN2-NOTES.md  PLAN2-TRANSILIENCE-INVENTORY.md  PLAN2-VIDEO-MAP.md  README.md  RELEASE.md  books-and-courses.md  glossary.md  mkdocs.yml  pyproject.toml
.github/: lychee.toml  pull_request_template.md
.github/ISSUE_TEMPLATE/: add-link.md  replace-link.md  stale-topic-review.md
.github/workflows/: integrity.yml  link-check.yml  pages.yml
docs/: glossary.md  index.md
docs/paths/: security-to-ai.md
docs/topics/: 01-foundations.md  02-building-llm-apps.md  03-mcp.md  05-llm-vulnerabilities.md  06-agentic-security.md  09-governance-and-compliance.md  10-incident-response.md  11-ai-for-soc.md  13-ai-for-vulnerability-management.md  14-ai-for-grc.md  16-research-frontier.md
paths/: ai-to-security.md  grc.md  practitioner.md  security-to-ai.md
scripts/: generate_paths.py  generate_topics.py
tests/: conftest.py  test_frontmatter.py  test_h2_lockin.py  test_link_bounds.py  test_path_anchors.py  test_readme_integrity.py
topics/: 01-foundations.md  02-building-llm-apps.md  03-mcp.md  04-prompt-injection.md  05-llm-vulnerabilities.md  06-agentic-security.md  07-red-teaming.md  08-attacking-ai-tooling.md  09-governance-and-compliance.md  10-incident-response.md  11-ai-for-soc.md  12-ai-for-pentesting.md  13-ai-for-vulnerability-management.md  14-ai-for-grc.md  15-ai-for-threat-intel.md  16-research-frontier.md
